--- a/relatorio.html
+++ b/relatorio.html
@@ -13,8 +13,8 @@
             --card: rgba(255, 255, 255, 0.03); 
             --border: rgba(255, 255, 255, 0.08); 
             --text: #94a3b8; 
+            --primary: #255fff;
         }
-
         body { 
             background: var(--bg); 
             color: white; 
@@ -25,7 +25,6 @@
             background-image: radial-gradient(circle at top right, rgba(168, 85, 247, 0.1), transparent 50%);
             background-attachment: fixed;
         }
-
         aside { 
             width: 260px; 
             background: rgba(8, 10, 15, 0.8); 
@@ -34,8 +33,9 @@
             height: 100vh; 
             backdrop-filter: blur(20px); 
             z-index: 100; 
+            display: flex;
+            flex-direction: column;
         }
-
         .nav-item { 
             display: flex; 
             align-items: center; 
@@ -45,103 +45,97 @@
             text-decoration: none; 
             margin: 5px 15px; 
             border-radius: 12px; 
+            transition: 0.3s;
         }
-
         .nav-item.active { 
             background: rgba(168, 85, 247, 0.1); 
             color: var(--purple); 
             font-weight: 700; 
             border: 1px solid rgba(168, 85, 247, 0.2); 
         }
-
         main { margin-left: 260px; padding: 60px; width: 100%; box-sizing: border-box; }
-
         .report-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 25px;
             margin-bottom: 30px;
         }
-
         .glass-card {
             background: var(--card);
             border: 1px solid var(--border);
             border-radius: 30px;
             padding: 30px;
         }
-
         .full-card { grid-column: 1 / -1; }
-
         .stat-row {
             display: flex;
             justify-content: space-between;
             padding: 15px 0;
             border-bottom: 1px solid var(--border);
         }
-
         .stat-row:last-child { border: none; }
-
         .label { color: var(--text); font-size: 14px; }
         .value { font-weight: 700; }
         .vencido { color: #ff3b3b; }
-
         table { width: 100%; border-collapse: collapse; margin-top: 20px; }
         th { text-align: left; color: var(--text); font-size: 12px; text-transform: uppercase; padding: 15px; border-bottom: 1px solid var(--border); }
         td { padding: 15px; border-bottom: 1px solid var(--border); font-size: 14px; }
     </style>
 </head>
 <body>
-
     <aside>
         <div style="padding: 45px 35px;"><h2 style="margin:0; font-weight:900; letter-spacing:-1.5px;">vitraclip<span style="color:var(--purple)">.</span></h2></div>
         <nav>
             <a href="dashboard.html" class="nav-item"><i data-lucide="layout-grid"></i> Dashboard</a>
+            <a href="pagar.html" class="nav-item"><i data-lucide="wallet"></i> Contas a Pagar</a>
             <a href="alertas.html" class="nav-item"><i data-lucide="bell"></i> Alertas</a>
             <a href="estimativa.html" class="nav-item"><i data-lucide="zap"></i> Estimativa</a>
             <a href="relatorio.html" class="nav-item active"><i data-lucide="pie-chart"></i> Relatório</a>
+            <div style="margin-top: auto; padding: 20px 15px; margin-bottom: 20px;">
+                <a href="scanner.html" class="nav-item" style="border: 1px dashed var(--purple); color: var(--purple); justify-content: center; background: rgba(168, 85, 247, 0.05);">
+                    <i data-lucide="scan"></i> NOVO SCAN
+                </a>
+            </div>
         </nav>
     </aside>
 
     <main>
         <header style="margin-bottom: 40px;">
             <h1 style="font-size: 38px; font-weight: 800; margin:0;">Relatório Analítico</h1>
-            <p style="color:var(--text)">Consolidado de capturas, vencimentos e projeções.</p>
+            <p style="color:var(--text)">Consolidado de capturas pendentes e saúde financeira.</p>
         </header>
 
         <div class="report-grid">
             <div class="glass-card">
-                <h3 style="margin-top:0"><i data-lucide="activity" size="18" style="vertical-align:middle"></i> Saúde Financeira</h3>
+                <h3 style="margin-top:0"><i data-lucide="activity" size="18" style="vertical-align:middle"></i> Pendências Ativas</h3>
                 <div class="stat-row">
-                    <span class="label">Total Geral Escaneado</span>
+                    <span class="label">Total a Pagar</span>
                     <span class="value" id="res-total">R$ 0,00</span>
                 </div>
                 <div class="stat-row">
-                    <span class="label">Total Atrasado (Alertas)</span>
+                    <span class="label">Total Atrasado</span>
                     <span class="value vencido" id="res-vencido">R$ 0,00</span>
                 </div>
                 <div class="stat-row">
-                    <span class="label">Projeção Próximo Mês</span>
+                    <span class="label">Projeção com Margem</span>
                     <span class="value" id="res-proj" style="color:var(--purple)">R$ 0,00</span>
                 </div>
             </div>
-
             <div class="glass-card" style="display:flex; align-items:center; justify-content:center;">
                 <canvas id="chartPizza" style="max-height: 200px;"></canvas>
             </div>
-
             <div class="glass-card full-card">
                 <h3 style="margin-top:0">Detalhamento por Documento</h3>
                 <table>
                     <thead>
                         <tr>
                             <th>Empresa</th>
-                            <th>Data</th>
+                            <th>Data Venc.</th>
                             <th>Status</th>
                             <th>Valor</th>
                         </tr>
                     </thead>
-                    <tbody id="tabela-corpo">
-                        </tbody>
+                    <tbody id="tabela-corpo"></tbody>
                 </table>
             </div>
         </div>
@@ -149,6 +143,7 @@
 
     <script>
         lucide.createIcons();
+        let meuGrafico = null;
 
         function cleanVal(v) {
             if (typeof v === 'number') return v;
@@ -160,66 +155,84 @@
         }
 
         function gerarRelatorio() {
-            const db = JSON.parse(localStorage.getItem('vitraclip_scans') || "[]");
+            const dbRaw = JSON.parse(localStorage.getItem('vitraclip_scans') || "[]");
+            // SINCRONIZAÇÃO: Ignora o que já foi pago
+            const db = dbRaw.filter(item => item.status !== 'pago');
+            
             const hoje = new Date();
             hoje.setHours(0,0,0,0);
-
+            
             let totalGeral = 0;
             let totalVencido = 0;
             const empresas = {};
-
             const tabela = document.getElementById('tabela-corpo');
+            tabela.innerHTML = '';
+
+            if (db.length === 0) {
+                tabela.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:30px; color:var(--text)">Nenhum documento pendente para gerar relatório.</td></tr>';
+                document.getElementById('res-total').innerText = "R$ 0,00";
+                document.getElementById('res-vencido').innerText = "R$ 0,00";
+                document.getElementById('res-proj').innerText = "R$ 0,00";
+                if(meuGrafico) meuGrafico.destroy();
+                return;
+            }
 
             db.forEach(item => {
                 const valor = cleanVal(item.valor);
                 totalGeral += valor;
 
-                // Lógica de Vencimento
                 const [d, m, y] = item.data.split('/');
                 const dataVenc = new Date(y, m-1, d);
                 const isVencido = dataVenc < hoje;
-                if(isVencido) totalVencido += valor;
 
-                // Agrupar para o gráfico
+                if(isVencido) totalVencido += valor;
                 empresas[item.empresa] = (empresas[item.empresa] || 0) + valor;
 
-                // Popular Tabela
                 tabela.innerHTML += `
                     <tr>
-                        <td style="font-weight:700">${item.empresa}</td>
+                        <td style="font-weight:700">${item.empresa || 'Doc. Identificado'}</td>
                         <td>${item.data}</td>
-                        <td><span style="color:${isVencido ? '#ff3b3b' : '#00ff88'}">${isVencido ? 'Atrasado' : 'Em dia'}</span></td>
+                        <td><span style="color:${isVencido ? '#ff3b3b' : '#00ff88'}">${isVencido ? 'Atrasado' : 'Pendente'}</span></td>
                         <td style="font-weight:700">R$ ${valor.toLocaleString('pt-BR', {minimumFractionDigits:2})}</td>
                     </tr>
                 `;
             });
 
-            // Preencher Cards
             document.getElementById('res-total').innerText = totalGeral.toLocaleString('pt-BR', {style:'currency', currency:'BRL'});
             document.getElementById('res-vencido').innerText = totalVencido.toLocaleString('pt-BR', {style:'currency', currency:'BRL'});
-            document.getElementById('res-proj').innerText = (totalGeral * 1.1).toLocaleString('pt-BR', {style:'currency', currency:'BRL'});
+            document.getElementById('res-proj').innerText = (totalGeral * 1.12).toLocaleString('pt-BR', {style:'currency', currency:'BRL'});
 
-            // Gráfico de Pizza
-            new Chart(document.getElementById('chartPizza'), {
+            renderChart(empresas);
+            lucide.createIcons();
+        }
+
+        function renderChart(empresas) {
+            const ctx = document.getElementById('chartPizza');
+            if (meuGrafico) meuGrafico.destroy();
+
+            meuGrafico = new Chart(ctx, {
                 type: 'doughnut',
                 data: {
                     labels: Object.keys(empresas),
                     datasets: [{
                         data: Object.values(empresas),
-                        backgroundColor: ['#a855f7', '#255fff', '#00ff88', '#ff3b3b', '#ff9500'],
-                        borderWidth: 0,
-                        hoverOffset: 10
+                        backgroundColor: ['#a855f7', '#255fff', '#00ff88', '#ff3b3b', '#ff9500', '#facc15'],
+                        borderWidth: 0
                     }]
                 },
                 options: {
                     cutout: '70%',
-                    plugins: { legend: { position: 'right', labels: { color: '#94a3b8', usePointStyle: true } } }
+                    plugins: { 
+                        legend: { 
+                            position: 'right', 
+                            labels: { color: '#94a3b8', usePointStyle: true, padding: 20 } 
+                        } 
+                    }
                 }
             });
-
-            lucide.createIcons();
         }
 
+        window.onfocus = gerarRelatorio;
         window.onload = gerarRelatorio;
     </script>
 </body>
