--- a/dashboard.html
+++ b/dashboard.html
@@ -13,9 +13,7 @@
             --border: rgba(255, 255, 255, 0.08); 
             --text: #94a3b8; 
         }
-
         * { box-sizing: border-box; }
-
         body { 
             background: var(--bg); 
             color: white; 
@@ -26,7 +24,6 @@
             background-image: radial-gradient(circle at top right, rgba(37, 95, 255, 0.1), transparent 50%);
             background-attachment: fixed;
         }
-
         aside { 
             width: 260px; 
             background: rgba(8, 10, 15, 0.7); 
@@ -38,7 +35,6 @@
             display: flex;
             flex-direction: column;
         }
-
         .nav-item { 
             display: flex; 
             align-items: center; 
@@ -51,14 +47,12 @@
             transition: 0.3s; 
             border: 1px solid transparent;
         }
-
         .nav-item.active { 
             background: rgba(37, 95, 255, 0.1); 
             color: var(--primary); 
             font-weight: 700; 
             border-color: rgba(37, 95, 255, 0.2); 
         }
-
         main { 
             margin-left: 260px; 
             padding: 60px; 
@@ -66,14 +60,12 @@
             position: relative;
             z-index: 1;
         }
-
         .stats-grid { 
             display: grid; 
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
             gap: 20px; 
             margin-bottom: 40px; 
         }
-
         .stat-card { 
             background: var(--card); 
             border: 1px solid var(--border); 
@@ -82,12 +74,10 @@
             position: relative;
             transition: 0.3s;
         }
-
         .stat-card:hover {
             border-color: rgba(37, 95, 255, 0.3);
             background: rgba(255, 255, 255, 0.05);
         }
-
         .stat-card small { 
             color: var(--text); 
             font-weight: 700; 
@@ -95,20 +85,17 @@
             text-transform: uppercase; 
             letter-spacing: 1px; 
         }
-
         .stat-card h2 { 
             margin: 12px 0 0 0; 
             font-size: 32px; 
             font-weight: 800; 
         }
-
         .content-box { 
             background: var(--card); 
             border: 1px solid var(--border); 
             border-radius: 30px; 
             padding: 30px; 
         }
-
         .item-row { 
             display: flex; 
             justify-content: space-between; 
@@ -120,12 +107,10 @@
             border: 1px solid transparent; 
             transition: 0.3s; 
         }
-
         .item-row:hover { 
             background: rgba(37, 95, 255, 0.05); 
             border-color: var(--primary); 
         }
-
         .badge { 
             background: rgba(37, 95, 255, 0.1); 
             color: var(--primary); 
@@ -135,7 +120,23 @@
             font-weight: 800; 
             text-transform: uppercase;
         }
-
+        #btn-ver-tudo {
+            display: block;
+            width: 100%;
+            padding: 15px;
+            margin-top: 20px;
+            background: transparent;
+            border: 1px solid var(--border);
+            color: var(--text);
+            border-radius: 15px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: 0.3s;
+        }
+        #btn-ver-tudo:hover {
+            background: rgba(255,255,255,0.05);
+            color: white;
+        }
         ::-webkit-scrollbar { width: 8px; }
         ::-webkit-scrollbar-track { background: var(--bg); }
         ::-webkit-scrollbar-thumb { background: var(--border); border-radius: 10px; }
@@ -148,11 +149,11 @@
         </div>
         <nav>
             <a href="dashboard.html" class="nav-item active"><i data-lucide="layout-grid"></i> Dashboard</a>
+            <a href="pagar.html" class="nav-item"><i data-lucide="wallet"></i> Contas a Pagar</a>
             <a href="alertas.html" class="nav-item"><i data-lucide="bell"></i> Alertas</a>
             <a href="estimativa.html" class="nav-item"><i data-lucide="zap"></i> Estimativa</a>
             <a href="relatorio.html" class="nav-item"><i data-lucide="pie-chart"></i> Relatório</a>
             <a href="perfil.html" class="nav-item"><i data-lucide="user"></i> Perfil</a>
-
             <div style="margin-top: auto; padding: 20px 15px; margin-bottom: 20px;">
                 <a href="scanner.html" class="nav-item" style="border: 1px dashed var(--primary); color: var(--primary); justify-content: center; background: rgba(37, 95, 255, 0.05);">
                     <i data-lucide="scan"></i> NOVO SCAN
@@ -160,13 +161,11 @@
             </div>
         </nav>
     </aside>
-
     <main>
         <header style="margin-bottom: 50px;">
             <h1 style="margin:0; font-size: 38px; font-weight: 800; letter-spacing: -1px;">Painel de Controle</h1>
             <p style="color: var(--text); margin-top: 8px; font-size: 16px;">Dados consolidados da extração Vision Neural.</p>
         </header>
-
         <div class="stats-grid">
             <div class="stat-card">
                 <small>Total Processado</small>
@@ -181,60 +180,94 @@
                 <h2 id="card-media">R$ 0,00</h2>
             </div>
         </div>
-
         <div class="content-box">
             <h3 style="margin:0 0 25px 0; font-size: 20px;">Histórico de Capturas</h3>
             <div id="container-lista"></div>
+            <button id="btn-ver-tudo" style="display: none;">Ver Histórico Completo</button>
         </div>
     </main>
+ <script>
+    lucide.createIcons();
+    let mostrarTodos = false;
 
-    <script>
-        lucide.createIcons();
+    function formatarParaNumero(valorMix) {
+        if (typeof valorMix === 'number') return valorMix;
+        if (!valorMix) return 0;
+        let limpo = valorMix.toString().replace(/[^\d,.-]/g, '');
+        if (limpo.includes(',') && limpo.includes('.')) {
+            limpo = limpo.replace(/\./g, '').replace(',', '.');
+        } else {
+            limpo = limpo.replace(',', '.');
+        }
+        return parseFloat(limpo) || 0;
+    }
 
-        function formatarParaNumero(valorMix) {
-            if (typeof valorMix === 'number') return valorMix;
-            if (!valorMix) return 0;
-            let limpo = valorMix.toString().replace(/[^\d,.-]/g, '');
-            if (limpo.includes(',') && limpo.includes('.')) {
-                limpo = limpo.replace(/\./g, '').replace(',', '.');
-            } else {
-                limpo = limpo.replace(',', '.');
-            }
-            return parseFloat(limpo) || 0;
+    function render() {
+        // Puxa o banco de dados atualizado
+        const db = JSON.parse(localStorage.getItem('vitraclip_scans') || "[]");
+        const lista = document.getElementById('container-lista');
+        const btnVerTudo = document.getElementById('btn-ver-tudo');
+        lista.innerHTML = '';
+        
+        // FILTRO: No Dashboard, vamos mostrar apenas o que NÃO foi pago ainda
+        // Para que os números batam com a tela de "Contas a Pagar"
+        const dadosAtivos = db.filter(item => item.status !== 'pago');
+
+        let soma = 0;
+        if (dadosAtivos.length === 0) {
+            lista.innerHTML = '<p style="color:var(--text); text-align:center; padding:40px;">Tudo limpo! Nenhuma pendência ativa.</p>';
+            document.getElementById('card-total').innerText = "R$ 0,00";
+            document.getElementById('card-qty').innerText = "0";
+            document.getElementById('card-media').innerText = "R$ 0,00";
+            return;
         }
 
-        function render() {
-            const db = JSON.parse(localStorage.getItem('vitraclip_scans') || "[]");
-            const lista = document.getElementById('container-lista');
-            let soma = 0;
+        const limite = 10;
+        const itensParaExibir = mostrarTodos ? dadosAtivos : dadosAtivos.slice(0, limite);
 
-            if (db.length === 0) {
-                lista.innerHTML = '<p style="color:var(--text); text-align:center; padding:40px;">Aguardando o primeiro scan...</p>';
-                return;
-            }
+        dadosAtivos.forEach((item, index) => {
+            const num = formatarParaNumero(item.valor);
+            soma += num; // Soma apenas o que não está pago
 
-            db.forEach(item => {
-                const num = formatarParaNumero(item.valor);
-                soma += num;
+            if (index < itensParaExibir.length) {
                 lista.innerHTML += `
                     <div class="item-row">
                         <div>
                             <div style="font-weight:700; font-size:16px;">${item.empresa || 'Doc. Identificado'}</div>
-                            <div style="font-size:12px; color:var(--text); margin-top:5px;">${item.data}</div>
+                            <div style="font-size:12px; color:var(--text); margin-top:5px;">${item.data} • <span style="color:var(--primary)">Pendente</span></div>
                         </div>
                         <div style="text-align:right;">
                             <div style="font-weight:800; color:var(--primary); font-size:18px;">R$ ${num.toLocaleString('pt-BR', {minimumFractionDigits: 2})}</div>
                             <span class="badge">Sincronizado</span>
                         </div>
                     </div>`;
-            });
+            }
+        });
 
-            document.getElementById('card-total').innerText = soma.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
-            document.getElementById('card-qty').innerText = db.length;
-            document.getElementById('card-media').innerText = (soma / (db.length || 1)).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
-            lucide.createIcons();
+        // Gerencia o botão de "Ver Tudo" baseado nos dados filtrados
+        if (dadosAtivos.length > limite && !mostrarTodos) {
+            btnVerTudo.style.display = 'block';
+            btnVerTudo.innerText = `Ver todos os ${dadosAtivos.length} pendentes`;
+        } else {
+            btnVerTudo.style.display = 'none';
         }
-        window.onload = render;
-    </script>
+
+        // Atualiza Cards com os valores sincronizados (apenas pendentes)
+        document.getElementById('card-total').innerText = soma.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
+        document.getElementById('card-qty').innerText = dadosAtivos.length;
+        document.getElementById('card-media').innerText = (soma / (dadosAtivos.length || 1)).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
+        
+        lucide.createIcons();
+    }
+
+    document.getElementById('btn-ver-tudo').onclick = () => {
+        mostrarTodos = true;
+        render();
+    };
+
+    // Recarrega sempre que a página ganhar foco (caso o usuário tenha pago em outra aba)
+    window.onfocus = render;
+    window.onload = render;
+</script>
 </body>
 </html>
